# pearl

./: Cargo.toml  cachegrind.out  mrf.txt  perf.data.old
data/: family-tree.txt
src/: alphabets.rs  bayes.rs  factor_graph.rs  inference.rs  lib.rs  main.rs  markov.rs  node.rs  utils.rs
src/alphabets/: binary.rs  pollen_allergy.rs
src/markov/: message_bank.rs  potentials.rs
src/node/: pollen_allergy_node.rs
src/utils/: printing.rs  testing.rs
