[package]
name = "pearl"
version = "0.1.0"
authors = ["Odin <odin.sev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
petgraph = "0.6.0"
ndarray = "0.15.3"
argmax = {version= "0.1.0", git = "https://github.com/odinase/argmax"}
rand_distr = "0.4.2"
rand = "0.8.4"
